# multimake

./: LICENSE  MultimakeAutotools.cmake  MultimakeCMake.cmake  MultimakeCheck.cmake  MultimakeConfig.cmake  MultimakeMaven.cmake  MultimakeQt.cmake  README.md  environment.in
examples/: README.md
examples/BuildIVIPackages/: CMakeLists.txt
examples/Qt/FromGit/: CMakeLists.txt
examples/Qt/FromRelease/: CMakeLists.txt
examples/Qt/NoQt/: CMakeLists.txt
examples/layers/: IVILayerConfig.cmake  UbuntuLayerConfig.cmake
